# comic-quote

./: .gitignore  README.md  alembic.ini  pyproject.toml  tailwind.config.js
comic_quote/: app.py  config.py
comic_quote/core/: cmd.py
comic_quote/core/db/migrations/: env.py
comic_quote/core/db/migrations/versions/: 2024-04-15_init_c212a19bf484.py
comic_quote/domain/account/: __init__.py  entity.py  impl.py
comic_quote/domain/quote/: __init__.py  entity.py  impl.py  repo.py  service.py
comic_quote/handler/: deps.py  htmx.py  rest.py
jinja2/: admin.html.j2  index.html.j2
tests/domain/account/: test_impl.py
tests/e2e/: test_e2e.py
