[tool.poetry]
name = "comic_quote"
version = "0.1.0"
description = "Comic quote API & web"
authors = ["Taein Min <maintain0404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
uvicorn = "^0.29.0"
python = "3.12.*"
pydantic = { version = "^2.6.4", extras = ['email'] }
sqlalchemy = "^2.0.29"
jinja2 = "^3.1.3"
pydantic-settings = "^2.2.1"
litestar = { version = "^2.8.2", extras = [
    "sqlalchemy",
    "cli",
    "structlog",
    "jwt",
] }
typing_extensions = "^4.11.0"
aiosqlite = "^0.20.0"
bcrypt = "^4.1.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
black = "^23.3.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
async-asgi-testclient = "^1.4.11"

[tool.ruff]
src = ['comic-quote', 'tests']

[tool.ruff.lint]
select = ['E', 'F', 'I', 'UP']

[tool.ruff.lint.isort] # rule I
extra-standard-library = ["typing_extensions"]
required-imports = ["from __future__ import annotations"]
known-first-party = ['comic-quote']

[tool.ruff.lint.pydocstyle] # rule D
convention = 'google'

[tool.pytest.ini_options]
pythonpath = ["./"]
testpaths = ['./tests']
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
